--- a/configs/experiment/hg38/hg38.yaml
+++ b/configs/experiment/hg38/hg38.yaml
@@ -27,7 +27,7 @@ dataset:
   # optional, default is max_length
   max_length_val: ${dataset.max_length}
   max_length_test: ${dataset.max_length}
-  tokenizer_name: char
+  tokenizer_name: bpe
   pad_max_length: null  # needed for bpe tokenizer
   add_eos: true
   rc_aug: false
